--- a/qna/pom.xml
+++ b/qna/pom.xml
@@ -2,6 +2,24 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>net.silpp</groupId>
   <artifactId>qna</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>1.0.0</version>
   <packaging>war</packaging>
+  
+  <build>
+  	<finalName>qna</finalName>
+  	
+  	<plugins>
+  		<plugin>
+  			<groupId>org.apache.maven.plugins</groupId>
+  			<artifactId>maven-compiler-plugin</artifactId>
+  			<version>3.1</version>
+  			<configuration>
+  				<source>1.6</source>
+  				<target>1.6</target>
+  				<encoding>utf-8</encoding>
+  				<failOnMissingWebXml>false</failOnMissingWebXml>
+  			</configuration>
+  		</plugin>
+  	</plugins>
+  </build>
 </project>
